feat: improve vehicle detail flow, category APIs, and booking schema compatibility